--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div id="app">
         <ul>
-            <li v-for="item in toDoList">
+            <li v-for="item in toDoList" v-if="item.done === true">
                 {{ item.text }}
             </li>
         </ul>
