--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <div id="app">
         <div class="input-group py-3 mt-3">
-            <input v-model="myInput.text" type="text" class="form-control" placeholder="Inserisci qualcosa da fare" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <input v-model="myInput" type="text" class="form-control" placeholder="Inserisci qualcosa da fare" aria-label="Recipient's username" aria-describedby="button-addon2">
             <button @click="addToDo" class="btn btn-outline-secondary" type="button" id="button-addon2">Aggiungi</button>
         </div>
           
