--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 </head>
 
 <body>
+   <div class="title">
+    <img src="img/icons8-fox-48 copia.png" alt="logo">
+    <h1>ToDo List</h1>
+   </div>
     <div id="app">
         <div class="input-group py-3 mt-3">
             <input @keyup.enter="addToDo" v-model="myInput" type="text" class="form-control" placeholder="Inserisci qualcosa da fare" aria-label="Recipient's username" aria-describedby="button-addon2">
@@ -30,10 +34,10 @@
         <ul>
             <template v-for="(item, index) in toDoList">
                 <li v-if="item.done === true">
-                    <span class="doneToDo">{{ item.text }}</span> <i @click="removeToDo(index)" class="fa-solid fa-xmark"></i>
+                    <span @click="changeDoneValue" class="doneToDo">{{ item.text }}</span> <i @click="removeToDo(index)" class="fa-solid fa-xmark"></i>
                 </li>
                 <li v-else="item.done === false">
-                    <span>{{ item.text }}</span> <i @click="removeToDo(index)" class="fa-solid fa-xmark"></i>
+                    <span @click="changeDoneValue">{{ item.text }}</span> <i @click="removeToDo(index)" class="fa-solid fa-xmark"></i>
                 </li>
             </template>
         </ul>
