--- a/index.html
+++ b/index.html
@@ -26,21 +26,24 @@
     <h1>ToDo List</h1>
    </div>
     <div id="app">
+        <!-- search bar -->
         <div class="input-group py-3 mt-3">
             <input @keyup.enter="addToDo" v-model="myInput" type="text" class="form-control" placeholder="Inserisci qualcosa da fare" aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button @click="addToDo" class="btn btn-outline-secondary" type="button" id="button-addon2">Aggiungi</button>
+            <button @click="addToDo" class="btn btn-secondary" type="button" id="button-addon2">Aggiungi</button>
         </div>
-          
+        <!-- /search bar -->
+        <!-- todo list -->
         <ul>
             <template v-for="(item, index) in toDoList">
                 <li v-if="item.done === true">
                     <span @click="changeDoneValue(index)" class="doneToDo">{{ item.text }}</span> <i @click="removeToDo(index)" class="fa-solid fa-xmark"></i>
                 </li>
-                <li v-else="item.done === false">
+                <li v-else>
                     <span @click="changeDoneValue(index)">{{ item.text }}</span> <i @click="removeToDo(index)" class="fa-solid fa-xmark"></i>
                 </li>
             </template>
         </ul>
+        <!-- /todo list -->
     </div>
     <!-- vue js -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
